--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: The Pansy, November 1886, Vol. 14
 url: http://www.gutenberg.org/ebooks/49156
